--- a/STA_380_Exam_2.Rmd
+++ b/STA_380_Exam_2.Rmd
@@ -2,8 +2,11 @@
 title: 'STA 380 Part 2: Exercises'
 author: "Aidan Cremins, Peyton Lewis, Joe Morris, Amrit Sandhu"
 date: '2022-08-15'
-output: github_document
+output:
+  pdf_document:
+    latex_engine: xelatex
 ---
+[https://github.com/AmritSd/STA-380-Exam](https://github.com/AmritSd/STA-380-Exam)
 
 ```{r,include=FALSE}
 library(dplyr)
